--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ lines: # You can add HTML Tags in the Text
   - text: "The lower you fall, the higher you'll fly."
   - text: "Where’s your will to be weird?"
 
-me-img: "/img/jetpacktocat.png"
+me-img: "/img/avatar.png"
 
 # To use facebook profile pic comment the previous line and uncomment the following
 # line, and replace 'user_id' with your facebook user id.
@@ -122,7 +122,7 @@ pinterest-share: True
 pocket-share: True
 vkontakte-share: True
 
-disqus-shortname: "personal-jekyll-theme"
+disqus-shortname: "joseiuri"
 
 syntax-highlight: True
 
@@ -130,23 +130,23 @@ syntax-highlight: True
 # Timeline #
 ############
 
-events:
-  - image: "/img/timeline/spidertocat.png"
-    date: "September 2013 - Today"
-    description: "Saving the neighborhood!"
-  - image: "/img/timeline/baracktocat.jpg"
-    date: "September 2007 - August 2013"
-    description: "Started coding"
+# events:
+#   - image: "/img/timeline/spidertocat.png"
+#     date: "September 2013 - Today"
+#     description: "Saving the neighborhood!"
+#   - image: "/img/timeline/baracktocat.jpg"
+#     date: "September 2007 - August 2013"
+#     description: "Started coding"
 
 # First image of the Timeline
 
-timeline-img: "/img/timeline/default.png"
+# timeline-img: "/img/timeline/default.png"
 
 ###########
 # Contact #
 ###########
 
-email: "your@email.here"
+email: "jose.brito@ee.ufcg.edu.br"
 
 ################
 # Author Blurb #
@@ -156,8 +156,8 @@ email: "your@email.here"
 # This works best when your author blurb image has a transparent background, or matches your site background color.
 
 # if the author_blurb is not set, then this feature is skipped
-author_blurb: "John Smith is an awesome person. He lives in Flatland, where he works on two-dimensional engineering projects. In his spare time, John likes to eat cotton candy."
-author_blurb_image: "/img/author.png"
+author_blurb: "José Iuri is an Eletrical Engeneering student at Federal University of Campina Grande. He likes to verify designs and systems. At his free time he choose to spend time sleeping."
+author_blurb_image: "/img/avatar.png"
 
 ##################
 # Social Buttons #
@@ -185,7 +185,7 @@ err-404-img: "/img/labtocat.png"
 # GPG on Keybase #
 ##################
 
-keybase-username: johnsmith
+keybase-username: JoseIuri
 keybase-in-social: True
 keybase-in-footer: True
 
