--- a/_config.yml
+++ b/_config.yml
@@ -131,16 +131,19 @@ syntax-highlight: True
 ############
 
 # events:
-#   - image: "/img/timeline/spidertocat.png"
-#     date: "September 2013 - Today"
-#     description: "Saving the neighborhood!"
-#   - image: "/img/timeline/baracktocat.jpg"
-#     date: "September 2007 - August 2013"
-#     description: "Started coding"
+  - image: "/img/timeline/xmen.png"
+    date: "May 2018 - Today"
+    description: "Member of XMEN Lab"
+  - image: "/img/timeline/pet.jpg"
+    date: "July 2016 - May 2018"
+    description: "Member of PET at UFCG"
+  - image: "/img/timeline/ufcg.jpg"
+    date: "March 2015 - Today"
+    description: "Joined EE in UFCG"
 
 # First image of the Timeline
 
-# timeline-img: "/img/timeline/default.png"
+timeline-img: "/img/timeline/default.png"
 
 ###########
 # Contact #
@@ -165,15 +168,15 @@ author_blurb_image: "/img/avatar.png"
 
 social:
   - title: "facebook"
-    url: "https://facebook.com/"
+    url: "https://www.facebook.com/jose.iuri.3"
   - title: "twitter"
-    url: "https://twitter.com/"
+    url: "https://twitter.com/JosIuriBarbosa1"
   - title: "github"
-    url: "https://github.com/PanosSakkos/personal-jekyll-theme"
-  - title: "bitcoin"
-    url: "https://blockchain.info/address/1LHuKC9Em3KA5yoZaf7nngnNdf9K7s2gSi"
-  - title: "rss"
-    url: "/feed.xml"
+    url: "https://github.com/JoseIuri"
+  # - title: "bitcoin"
+  #   url: "https://blockchain.info/address/1LHuKC9Em3KA5yoZaf7nngnNdf9K7s2gSi"
+  # - title: "rss"
+  #   url: "/feed.xml"
 
 ############
 # 404 page #
