--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,15 @@
 # Site settings
-title: A blog about lorem ipsum dolor sit amet
+title: Hardware Verification made easy.
 description: A blog about lorem ipsum dolor sit amet
 # baseurl: "/particle" # the subpath of your site, e.g. /blog
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
 username: José Iuri
-user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.
-user_title: Software Developer
-email: anon@anon.com
-twitter_username: lorem_ipsum
-github_username:  lorem_ipsum
-gplus_username:  lorem_ipsum
+user_description: Member of the Lab of Excellence on Microelectronics of Northeast of Brazil at UFCG. Has interests in the areas of Microelectronics and Hardware Verification.
+user_title: Hardware Verification
+email: jose.brito@ee.ufcg.edu.br
+github_username:  JoseIuri
 
 # Google-analytics
 google-analytics:
